--- a/Index.html
+++ b/Index.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <!--Header start here-->
     <header class="headerarea">
+      <div class="container">
         <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <img src="images/btn.png" alt="mobilebutton">
@@ -69,14 +70,40 @@
                 <li class="nav-item">
                   <a class="nav-link theme-button" href="#">Try Whitepace free
                     <img src="images/vector.png" alt="">
-                  </a>
-                  
+                  </a> 
                 </li>
               </ul>
             </div>
-          </div>
         </nav>
+      </div>
     </header>
+    <!--end header-->
+    <!--start main area-->
+    <main class="mainarea">
+      <section class="heroarea">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-5 d-flex align-items-center">
+              <div class="hero-text">
+                <h3>Get More Done with whitepace</h3>
+                <p class="py-4">Project management software that enables your teams to collaborate,
+                   plan, analyze and manage everyday tasks</p>
+                   <a class="theme-button" href="#">Try Whitepace free
+                    <img src="images/vector.png" alt="">
+                  </a>
+              </div>
+            </div>
+            <div class="col-lg-7">
+              <div class="hero-image">
+                <img class="w-100" src="images/image-container.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </main>
+    <!--end main area-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" 
     crossorigin="anonymous"></script>
