--- a/Index.html
+++ b/Index.html
@@ -80,6 +80,7 @@
     <!--end header-->
     <!--start main area-->
     <main class="mainarea">
+      <!--Hero area start here-->
       <section class="heroarea">
         <div class="container">
           <div class="row">
@@ -101,7 +102,47 @@
           </div>
         </div>
       </section>
-
+      <!--Hero area ends-->
+      <!--Management area strart-->
+      <section class="management">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 d-flex align-items-center">
+              <div class="project-text">
+                <h3>Project <span>Management</span></h3>
+                <p class="py-4">Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly from the app.
+                   Take photos with the mobile app and save them to a note.</p>
+                   <a class="theme-button" href="#">Get Started
+                    <img class="responsive" src="images/vector.png" alt="">
+                  </a>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="hero-image">
+                <img class="w-100" src="images/image-container.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 order-lg-1 order-2">
+              <div class="hero-image">
+                <img class="w-100" src="images/work together image.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-6 d-flex align-items-center order-lg-2 order-1">
+              <div class="work-text">
+                <h3>Work <span>together</span></h3>
+                <p class="py-4">With whitepace, share your notes with your colleagues and collaborate on them.
+                  You can also publish a note to the internet and share the URL with others.                  
+                   </p>
+                   <a class="theme-button" href="#">Get Started
+                    <img src="images/vector.png" alt="">
+                  </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--end main area-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
