--- a/Index.html
+++ b/Index.html
@@ -165,6 +165,28 @@
           </div>
           </div>
         </section>
+      <!--Customise section start-->
+      <section class="customise-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="hero-image">
+                <img class="w-100" src="images/image-container.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-6 d-flex align-items-center">
+              <div class="project-text">
+                <h3>Customise it to <br> <span>your needs </span></h3>
+                <p class="py-4">Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.
+                </p>
+                   <a class="theme-button" href="#">Let’s Go
+                    <img class="responsive" src="images/vector.png" alt="">
+                  </a>
+              </div>
+            </div>
+          </div>
+          </div>
+        </section>
     </main>
     <!--end main area-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
