--- a/Index.html
+++ b/Index.html
@@ -187,6 +187,75 @@
           </div>
           </div>
         </section>
+      <!--priceing section starts-->
+      <section class="pricing-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-10 offset-lg-1 text-center">
+              <div class="project-text">
+                <h3>Choose <span>Your Plan </span></h3>
+                <p class="py-4">Whether you want to get organized, 
+                  keep your personal life on track, or boost workplace
+                   productivity, Evernote has the right plan for you.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row d-flex align-items-center">
+            <div class="col-lg-4">
+              <div class="single-pricing">
+                <h4>Free</h4>
+                <h2>$0</h2>
+                <p>Capture ideas and find them quickly</p>
+                <ul>
+                  <li> <img src="images/list-icon.png" alt=""> unlimited devices</li>
+                  <li><img src="images/list-icon.png" alt="">10 GB monthly uploads</li>
+                  <li><img src="images/list-icon.png" alt="">200 MB max. note size</li>
+                  <li><img src="images/list-icon.png" alt="">Customize Home dashboard and access extra widgets</li>
+                  <li><img src="images/list-icon.png" alt="">Connect primary Google Calendar account</li>
+                  <li><img src="images/list-icon.png" alt="">Add due dates, reminders, and notifications to your tasks</li>
+                </ul>
+                <a class="theme-button-three" href="#">Get Started
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="single-pricing-middle">
+                <h4>Personal</h4>
+                <h2>$11.99</h2>
+                <p>Keep home and family on track</p>
+                <ul>
+                  <li> <img src="images/list-icon-2.png" alt=""> unlimited devices</li>
+                  <li><img src="images/list-icon-2.png" alt="">10 GB monthly uploads</li>
+                  <li><img src="images/list-icon-2.png" alt="">200 MB max. note size</li>
+                  <li><img src="images/list-icon-2.png" alt="">Customize Home dashboard and access extra widgets</li>
+                  <li><img src="images/list-icon-2.png" alt="">Connect primary Google Calendar account</li>
+                  <li><img src="images/list-icon-2.png" alt="">Add due dates, reminders, and notifications to your tasks</li>
+                </ul>
+                <a class="theme-button" href="#">Get Started  
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="single-pricing">
+                <h4>Organization</h4>
+                <h2>$49.99</h2>
+                <p>Capture ideas and find them quickly</p>
+                <ul>
+                  <li> <img src="images/list-icon.png" alt=""> unlimited devices</li>
+                  <li><img src="images/list-icon.png" alt="">10 GB monthly uploads</li>
+                  <li><img src="images/list-icon.png" alt="">200 MB max. note size</li>
+                  <li><img src="images/list-icon.png" alt="">Customize Home dashboard and access extra widgets</li>
+                  <li><img src="images/list-icon.png" alt="">Connect primary Google Calendar account</li>
+                  <li><img src="images/list-icon.png" alt="">Add due dates, reminders, and notifications to your tasks</li>
+                </ul>
+                <a class="theme-button-three" href="#">Get Started
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--end main area-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
