--- a/Index.html
+++ b/Index.html
@@ -256,6 +256,46 @@
           </div>
         </div>
       </section>
+       
+    <!--your work sectin starts here-->
+    <section class="your-work">
+      <div class="container">
+        <div class="project-text text-center">
+          <h3>Customise it to<span>your needs </span></h3>
+          <p class="py-4">Access your notes from your computer,
+             phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. 
+            A terminal app is also available!
+          </p>
+             <a class="theme-button" href="#">Try Taskey
+              <img class="responsive" src="images/vector.png" alt="">
+            </a>
+        </div>
+      </div>
+    </section>
+    <!-- your data section-->
+    <section class="your-data">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 d-flex align-items-center">
+            <div class="project-text">
+              <h3>100% <span>your data </span></h3>
+              <p class="py-4">The app is open source and your notes 
+                are saved to an open format, so you'll always have access
+                 to them. Uses End-To-End Encryption (E2EE) to secure 
+                your notes and ensure no-one but yourself can access them.</p>
+                 <a class="theme-button" href="#">Get Started
+                  <img class="responsive" src="images/vector.png" alt="">
+                </a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="hero-image">
+              <img class="w-100" src="images/dataelement.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     </main>
     <!--end main area-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
