--- a/Index.html
+++ b/Index.html
@@ -275,7 +275,7 @@
     <!-- your data section-->
     <section class="your-data">
       <div class="container">
-        <div class="row">
+        <div class="row data-text">
           <div class="col-lg-6 d-flex align-items-center">
             <div class="project-text">
               <h3>100% <span>your data </span></h3>
@@ -296,6 +296,23 @@
         </div>
       </div>
     </section>
+    <!-- Our sponsors section-->
+    <section class="our-sponsors">
+        <div class="container">
+          <div class="row">
+            <div class="project-text text-center">
+              <h3>Our <span>sponsors</span></h3>
+            </div>
+          </div>
+        <div class="row text-center">
+          <div class="col-lg-3"><img class="sponsor-img" src="images/apple.png" alt=""></div>
+          <div class="col-lg-3"><img class="sponsor-img" src="images/microsoft.png" alt=""></div>
+          <div class="col-lg-3"><img class="sponsor-img" src="images/slack.png" alt=""></div>
+          <div class="col-lg-3"><img class="sponsor-img" src="images/google.png" alt=""></div>
+        </div>
+        </div>
+    </section>
+
     </main>
     <!--end main area-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
