--- a/Index.html
+++ b/Index.html
@@ -312,6 +312,29 @@
         </div>
         </div>
     </section>
+    <!--Work with Your section-->
+    <section class="work-with">
+      <div class="container">
+        <div class="row data-text gap-5">
+          <div class="col-lg-5">
+            <div class="hero-image">
+              <img class="w-100" src="images/apps.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-5 d-flex align-items-center">
+            <div class="project-text">
+              <h3>Work with Your <br>Favorite Apps Using whitepace</h3>
+              <p class="py-4">Whitepace teams up with your favorite software.
+                 Integrate with over 1000+ apps with Zapier to
+                 have all the tools you need for your project success.</p>
+                 <a class="theme-button" href="#">Read more
+                  <img class="responsive" src="images/vector.png" alt="">
+                </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     </main>
     <!--end main area-->
