end what our clients say

--- a/Index.html
+++ b/Index.html
@@ -256,85 +256,147 @@
           </div>
         </div>
       </section>
-       
-    <!--your work sectin starts here-->
-    <section class="your-work">
-      <div class="container">
-        <div class="project-text text-center">
-          <h3>Customise it to<span>your needs </span></h3>
-          <p class="py-4">Access your notes from your computer,
-             phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. 
-            A terminal app is also available!
-          </p>
-             <a class="theme-button" href="#">Try Taskey
-              <img class="responsive" src="images/vector.png" alt="">
-            </a>
-        </div>
-      </div>
-    </section>
-    <!-- your data section-->
-    <section class="your-data">
-      <div class="container">
-        <div class="row data-text">
-          <div class="col-lg-6 d-flex align-items-center">
-            <div class="project-text">
-              <h3>100% <span>your data </span></h3>
-              <p class="py-4">The app is open source and your notes 
-                are saved to an open format, so you'll always have access
-                 to them. Uses End-To-End Encryption (E2EE) to secure 
-                your notes and ensure no-one but yourself can access them.</p>
-                 <a class="theme-button" href="#">Get Started
-                  <img class="responsive" src="images/vector.png" alt="">
-                </a>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="hero-image">
-              <img class="w-100" src="images/dataelement.png" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Our sponsors section-->
-    <section class="our-sponsors">
+      <!--your work sectin starts here-->
+      <section class="your-work">
         <div class="container">
-          <div class="row">
+          <div class="project-text text-center">
+            <h3>Customise it to<span>your needs </span></h3>
+            <p class="py-4">Access your notes from your computer,
+              phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. 
+              A terminal app is also available!
+            </p>
+              <a class="theme-button" href="#">Try Taskey
+                <img class="responsive" src="images/vector.png" alt="">
+              </a>
+          </div>
+        </div>
+      </section>
+      <!-- your data section-->
+      <section class="your-data">
+        <div class="container">
+          <div class="row data-text">
+            <div class="col-lg-6 d-flex align-items-center">
+              <div class="project-text">
+                <h3>100% <span>your data </span></h3>
+                <p class="py-4">The app is open source and your notes 
+                  are saved to an open format, so you'll always have access
+                  to them. Uses End-To-End Encryption (E2EE) to secure 
+                  your notes and ensure no-one but yourself can access them.</p>
+                  <a class="theme-button" href="#">Get Started
+                    <img class="responsive" src="images/vector.png" alt="">
+                  </a>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="hero-image">
+                <img class="w-100" src="images/dataelement.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Our sponsors section-->
+      <section class="our-sponsors">
+          <div class="container">
+            <div class="row">
+              <div class="project-text text-center">
+                <h3>Our <span>sponsors</span></h3>
+              </div>
+            </div>
+          <div class="row text-center">
+            <div class="col-lg-3"><img class="sponsor-img" src="images/apple.png" alt=""></div>
+            <div class="col-lg-3"><img class="sponsor-img" src="images/microsoft.png" alt=""></div>
+            <div class="col-lg-3"><img class="sponsor-img" src="images/slack.png" alt=""></div>
+            <div class="col-lg-3"><img class="sponsor-img" src="images/google.png" alt=""></div>
+          </div>
+          </div>
+      </section>
+      <!--Work with Your section-->
+      <section class="work-with">
+        <div class="container">
+          <div class="row data-text gap-5">
+            <div class="col-lg-5">
+              <div class="hero-image">
+                <img class="w-100" src="images/apps.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-5 d-flex align-items-center">
+              <div class="project-text">
+                <h3>Work with Your <br>Favorite Apps Using whitepace</h3>
+                <p class="py-4">Whitepace teams up with your favorite software.
+                  Integrate with over 1000+ apps with Zapier to
+                  have all the tools you need for your project success.</p>
+                  <a class="theme-button" href="#">Read more
+                    <img class="responsive" src="images/vector.png" alt="">
+                  </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- What Our Clients Says section-->
+      <section class="what-our">
+        <div class="container">
+          <div class="row-one">
             <div class="project-text text-center">
-              <h3>Our <span>sponsors</span></h3>
+              <h3>What Our Clients <span>Says</span></h3>
             </div>
           </div>
-        <div class="row text-center">
-          <div class="col-lg-3"><img class="sponsor-img" src="images/apple.png" alt=""></div>
-          <div class="col-lg-3"><img class="sponsor-img" src="images/microsoft.png" alt=""></div>
-          <div class="col-lg-3"><img class="sponsor-img" src="images/slack.png" alt=""></div>
-          <div class="col-lg-3"><img class="sponsor-img" src="images/google.png" alt=""></div>
-        </div>
-        </div>
-    </section>
-    <!--Work with Your section-->
-    <section class="work-with">
-      <div class="container">
-        <div class="row data-text gap-5">
-          <div class="col-lg-5">
-            <div class="hero-image">
-              <img class="w-100" src="images/apps.png" alt="">
+          <div class="row justify-content-between">
+            <div class="col-lg-4 row single-testimonial">
+              <div class="textimonial-text">
+                <img src="images/quote.png" alt="">
+                <p>Whitepate is designed as a collaboration tool for 
+                  businesses that is a full project management solution.</p>
+                  <hr>
+              </div>
+              <div class="row textimonial-quote align-items-center">
+              <div class="col-lg-4">
+                <img src="images/avater2.png" alt="">
+              </div>
+              <div class="col-lg-8">
+                <h5>Oberon Shaw, MCH</h5>
+                <p>Head of Talent Acquisition, North America</p>
+              </div>
             </div>
-          </div>
-          <div class="col-lg-5 d-flex align-items-center">
-            <div class="project-text">
-              <h3>Work with Your <br>Favorite Apps Using whitepace</h3>
-              <p class="py-4">Whitepace teams up with your favorite software.
-                 Integrate with over 1000+ apps with Zapier to
-                 have all the tools you need for your project success.</p>
-                 <a class="theme-button" href="#">Read more
-                  <img class="responsive" src="images/vector.png" alt="">
-                </a>
             </div>
+            <div class="col-lg-4 row single-testimonial2">
+              <div class="textimonial-text">
+                <img src="images/quote1.png" alt="">
+                <p>Whitepate is designed as a collaboration tool for 
+                  businesses that is a full project management solution.</p>
+                  <hr>
+              </div>
+              <div class="row justify-content-between">
+              <div class="col-lg-4">
+                <img src="images/avater.png" alt="">
+              </div>
+              <div class="col-lg-8">
+                <h5>Oberon Shaw, MCH</h5>
+                <p>Head of Talent Acquisition, North America</p>
+              </div>
+            </div>
+            </div>
+            <div class="col-lg-4 row single-testimonial3">
+              <div class="textimonial-text">
+                <img src="images/quote1.png" alt="">
+                <p>Whitepate is designed as a collaboration tool for 
+                  businesses that is a full project management solution.</p>
+                  <hr>
+              </div>
+              <div class="row justify-content-between">
+              <div class="col-lg-4">
+                <img src="images/avater2.png" alt="">
+              </div>
+              <div class="col-lg-8">
+                <h5>Oberon Shaw, MCH</h5>
+                <p>Head of Talent Acquisition, North America</p>
+              </div>
+            </div>
+            </div>   
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
     </main>
     <!--end main area-->
